--- a/assets/scss/components/citadel/nav/_nav.scss
+++ b/assets/scss/components/citadel/nav/_nav.scss
@@ -9,6 +9,8 @@
 // 1. Remove the margin-left we add to default lists.
 //
 // -----------------------------------------------------------------------------
+/*
+//BDS edit 2/19/24
 
 .navList,
 .navBar {
@@ -141,3 +143,4 @@
         }
     }
 }
+*/
