--- a/assets/scss/components/foundation/dropdown/_dropdown.scss
+++ b/assets/scss/components/foundation/dropdown/_dropdown.scss
@@ -1,7 +1,8 @@
 // =============================================================================
 // DROPDOWN (CSS)
 // =============================================================================
-
+/*
+//BDS edit 2/19/24
 
 .dropdown {
     left: -9999px;
@@ -147,3 +148,4 @@
         margin-bottom: 0;
     }
 }
+*/
