--- a/assets/scss/layouts/body/_body.scss
+++ b/assets/scss/layouts/body/_body.scss
@@ -7,16 +7,16 @@
 //
 // =============================================================================
 
-
+/*
 .body {
     margin-bottom: spacing("double") * 2;
     margin-top: spacing("single"); // 1
 
     @include breakpoint("medium") {
-        margin-top: spacing("single") + spacing("base"); // 1
+        margin-top: 0 //spacing("single") + spacing("base"); // 1
     }
 }
-
+*/
 
 .page {
     @include grid-row(
