--- a/assets/scss/layouts/container/_container.scss
+++ b/assets/scss/layouts/container/_container.scss
@@ -2,7 +2,7 @@
 // GRID (CSS)
 // =============================================================================
 
-
+/*
 .container {
     margin-left: auto;
     margin-right: auto;
@@ -15,3 +15,4 @@
         padding: 0 ($container-padding * 4);
     }
 }
+*/ 
