--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -16,7 +16,7 @@
 //    content in center regardless its size.
 //
 // -----------------------------------------------------------------------------
-
+/*
 .skip-to-main-link {
     background: $header-bg;
     color: $color-textBase;
@@ -274,3 +274,4 @@
 
     }
 }
+*/
