--- a/assets/scss/components/citadel/forms/_forms.scss
+++ b/assets/scss/components/citadel/forms/_forms.scss
@@ -31,7 +31,7 @@
 
     .form-inlineMessage {
         &::before {
-            background: $form-error-icon no-repeat;
+            //background: $form-error-icon no-repeat;
             background-size: $form-inlineMessage-backgroundSize;
             content: "";
             display: inline-block;
