--- a/templates/components/common/header.html
+++ b/templates/components/common/header.html
@@ -12,7 +12,7 @@
                         </path>
                     </svg>1-888-689-7040</a><a
                     class="btn btn-link fw-semibold d-flex align-items-center text-decoration-none" role="button"
-                    href="#">Customer Service</a></div>
+                    href="{{settings.base_url}}/contact-us/">Customer Service</a></div>
         </div>
         <div class="col-auto text-center text-md-end d-none d-md-flex py-1 border-bottom border-light">
             <div class="btn-group btn-group-sm" role="group"><a
@@ -31,15 +31,17 @@
                     class="img-fluid" src="https://cdn.cdslink.net/logo-260x85-300.png" width="260" height="auto"></a>
         </div>
         <div class="col-12 col-md-10 col-lg-4 text-center order-3 mx-auto">
-            <form>
-                <div class="input-group mt-2 mt-lg-0"><input class="form-control" type="text"
-                        placeholder="Search keywords, Item #..." name="search"><button class="btn btn-primary"
-                        type="submit"><i class="fas fa-search fa-lg"></i></button></div>
+            <form action="{{settings.base_url}}/search.php">
+                <div class="input-group mt-2 mt-lg-0">
+                    <input class="form-control py-3" type="text" placeholder="Search keywords, Item #..." name="search_query" autocomplete="off" data-error-message="Search field cannot be empty." >
+                    <button class="btn btn-primary px-3" type="submit"><i class="fas fa-search fa-lg"></i></button>
+                </div>
             </form>
         </div>
         <div class="col-auto d-flex order-2 mx-auto order-lg-3"><a class="btn btn-link text-decoration-none"
-                role="button" href="{{urls.account.orders.all}}"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
-                    width="1em" height="1em" fill="currentColor" class="me-1" style="font-size: 25px;">
+                role="button" href="{{urls.account.orders.all}}"><svg xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 512 512" width="1em" height="1em" fill="currentColor" class="me-1"
+                    style="font-size: 25px;">
                     <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2023 Fonticons, Inc. -->
                     <path
                         d="M386.3 160H336c-17.7 0-32 14.3-32 32s14.3 32 32 32H464c17.7 0 32-14.3 32-32V64c0-17.7-14.3-32-32-32s-32 14.3-32 32v51.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0s-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3s163.8-62.5 226.3 0L386.3 160z">
@@ -54,9 +56,10 @@
                             d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464H398.7c-8.9-63.3-63.3-112-129-112H178.3c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3z">
                         </path>
                     </svg><span class="text-dark ms-1 fw-semibold">Login/Register</span></button>
-                <div class="dropdown-menu"><a class="dropdown-item" href="{{urls.auth.login}}">Sign-in</a><a class="dropdown-item"
-                        href="{{urls.auth.create_account}}">Register</a>
-                    <div class="dropdown-divider"></div><a class="dropdown-item" href="{{urls.auth.logout}}">Sign-out</a>
+                <div class="dropdown-menu"><a class="dropdown-item" href="{{urls.auth.login}}">Sign-in</a><a
+                        class="dropdown-item" href="{{urls.auth.create_account}}">Register</a>
+                    <div class="dropdown-divider"></div><a class="dropdown-item"
+                        href="{{urls.auth.logout}}">Sign-out</a>
                 </div>
             </div>
 
@@ -96,44 +99,54 @@
                             <li class="nav-item dropdown"><a
                                     class="dropdown-toggle nav-link d-flex align-items-center justify-content-lg-center text-white fw-bold text-uppercase"
                                     aria-expanded="false" data-bs-toggle="dropdown" href="#">My Account</a>
-                                <div class="dropdown-menu"><a class="dropdown-item" href="{{urls.account.orders.all}}">Orders &amp;
-                                        Invoices</a><a class="dropdown-item" href="{{urls.account.details}}">My Profile</a><a
-                                        class="dropdown-item" href="{{urls.account.addresses}}">Shipping Addresses</a><a class="dropdown-item"
-                                        href="{{urls.account.payment_methods.all}}">Saved Credit Cards</a>
-                                    <div class="dropdown-divider"></div><a class="dropdown-item" href="#">Apply for
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="{{urls.account.orders.all}}">Orders &amp;
+                                        Invoices</a>
+                                    <a class="dropdown-item" href="{{urls.account.details}}">My Profile</a>
+                                    <a class="dropdown-item" href="{{urls.account.addresses}}">Shipping Addresses</a>
+                                    <a class="dropdown-item" href="{{settings.base_url}}/account.php?action=payment_methods">Saved Credit
+                                        Cards</a>
+                                    <a class="dropdown-item" href="{{urls.account.returns}}">Returns</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="https://cads2.com/invoicing-application" target="_blank">Apply for
                                         Invoicing</a>
                                 </div>
                             </li>
                             <li class="nav-item dropdown"><a
                                     class="dropdown-toggle nav-link d-flex align-items-center justify-content-lg-center text-white fw-bold text-uppercase"
                                     aria-expanded="false" data-bs-toggle="dropdown" href="#">Forms</a>
-                                <div class="dropdown-menu"><a class="dropdown-item" href="#">Sales Forms</a><a
-                                        class="dropdown-item" href="#">Service Forms</a><a class="dropdown-item"
-                                        href="#">Office Forms</a>
-                                    <div class="dropdown-divider"></div><a class="dropdown-item" href="#">All
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="{{settings.base_url}}/sales-department-forms/">Sales
+                                        Forms</a>
+                                    <a class="dropdown-item"
+                                        href="{{settings.base_url}}/service-forms/">Service Forms</a>
+                                    <a class="dropdown-item" href="{{settings.base_url}}/body-shop-forms/">Body Shop
+                                        Forms</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="{{settings.base_url}}/car-dealership-forms/">All
                                         Forms</a>
                                 </div>
                             </li>
                             <li class="nav-item"><a
                                     class="nav-link d-flex align-items-center justify-content-lg-center text-white fw-bold text-uppercase"
-                                    href="#">Deal Jackets</a></li>
+                                    href="{{settings.base_url}}/deal-jackets/">Deal Jackets</a></li>
                             <li class="nav-item dropdown"><a
                                     class="dropdown-toggle nav-link d-flex align-items-center justify-content-lg-center text-white fw-bold text-uppercase"
                                     aria-expanded="false" data-bs-toggle="dropdown" href="#">Key Tags</a>
-                                <div class="dropdown-menu"><a class="dropdown-item" href="#">Donkey Key Tags<span
+                                <div class="dropdown-menu"><a class="dropdown-item" href="{{settings.base_url}}/car-dealer-key-tags">Donkey Key Tags<span
                                             class="badge bg-primary ms-2 fw-semibold">Exclusive</span></a><a
-                                        class="dropdown-item" href="#">Versa-Tag Key Tags</a><a class="dropdown-item"
-                                        href="#">Service Key Tags</a>
-                                    <div class="dropdown-divider"></div><a class="dropdown-item" href="#">All Key
+                                        class="dropdown-item" href="{{settings.base_url}}/genuine-versa-tags-key-tags">Versa-Tag Key Tags</a><a class="dropdown-item"
+                                        href="{{settings.base_url}}/stock-stickers/">Stock Stickers</a>
+                                    <div class="dropdown-divider"></div><a class="dropdown-item" href="{{settings.base_url}}/key-tags/">All Key
                                         Tags</a>
                                 </div>
                             </li>
                             <li class="nav-item"><a
                                     class="nav-link d-flex align-items-center justify-content-lg-center text-white fw-bold text-uppercase"
-                                    href="#">Window Stickers</a></li>
+                                    href="{{settings.base_url}}/window-stickers/">Window Stickers</a></li>
                             <li class="nav-item d-lg-none d-xl-flex"><a
                                     class="nav-link d-flex align-items-center justify-content-lg-center text-white fw-bold text-uppercase"
-                                    href="#">Floor Mats</a></li>
+                                    href="{{settings.base_url}}/car-floor-mats-storage-dispensers/">Floor Mats</a></li>
                         </ul>
                     </div>
                 </div>
@@ -142,8 +155,8 @@
     </div>
     <div class="row">
         <div class="col-12 text-center align-self-center bg-light py-2 mb-2"><span
-                class="text-uppercase fw-bold text-danger">Service Essentials +&nbsp;Free Shipping on
-                ALL&nbsp;orders over $149!&nbsp;</span><a class="link-secondary text-size-small" href="#">(Terms
+                class="text-uppercase fw-bold text-danger">Free Shipping on
+                ALL&nbsp;orders over $149!&nbsp;</span><a class="link-secondary text-size-small" href="{{settings.base_url}}/shipping/">(Terms
                 &amp; Conditions Apply)</a></div>
     </div>
 </div>
